# routes/v1/index.js
@@ -6,6 +6,7 @@ import generalController from "../../controllers/v1/generalController.js";
 import fbController from "../../controllers/v1/fbController.js";
 import igController from "../../controllers/v1/igController.js";
 import ytController from "../../controllers/v1/ytController.js";
+import twtController from "../../controllers/v1/twtController.js";
 
 const router = express.Router();
 
@@ -23,6 +24,7 @@ router.get("/status", (req, res) => {
 router.post("/download/facebook", downloadLimiter, fbController);
 router.post("/download/instagram", downloadLimiter, igController);
 router.post("/download/youtube", downloadLimiter, ytController);
+router.post("/download/twitter", downloadLimiter, twtController);
 router.post("/download/tiktok", downloadLimiter, tiktokController);
 router.post("/download/all", downloadLimiter, generalController);
 
